--- a/hello.html
+++ b/hello.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Welcome to Rock Paper Scissors</title>
+  <title>4aaa4f26</title>
   <style>
     body {
       font-family: Arial, sans-serif;
