--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Please Log In</title>
+  <title>4aaa4f26</title>
   <style>
     body { font-family: Arial, sans-serif; }
     .box { border: 2px solid blue; padding: 15px; width: fit-content; margin-bottom: 20px; }
