--- a/game.html
+++ b/game.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Rock Paper Scissors</title>
+  <title>4aaa4f26</title>
   <style>
     body { font-family: Arial, sans-serif; }
     .container { border: 2px solid blue; padding: 15px; width: fit-content; }
