--- a/login.html
+++ b/login.html
@@ -58,7 +58,7 @@
 
 <script>
 const validUsername = "umsi@umich.edu";
-const validPassword = "php123";
+const validPassword = "badsecret42";
 
 function checkLogin() {
   const username = document.getElementById("username").value.trim();
