--- a/login.html
+++ b/login.html
@@ -22,6 +22,7 @@
   </style>
 </head>
 <body onload="checkLoginStatus()">
+<a href="login.html">Please Log In</a>
 
 <div id="loginSection" class="box">
   <h1>Please Log In</h1>
