--- a/login.html
+++ b/login.html
@@ -33,6 +33,15 @@
   <button type="submit">Log In</button>
   <button type="button" onclick="cancelLogin()">Cancel</button>
 </form>
+<form id="gameForm">
+  <select name="choice">
+    <option value="">Select</option>
+    <option value="Rock">Rock</option>
+    <option value="Paper">Paper</option>
+    <option value="Scissors">Scissors</option>
+  </select>
+  <button type="submit">Play</button>
+</form>
 
 <div id="loginSection" class="box">
   <h1>Please Log In</h1>
