--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>4aaa4f26 - Rock Paper Scissors</title>
+  <title>4aaa4f26</title>
   <style>
     body {
       font-family: Arial;
@@ -16,6 +16,7 @@
 </head>
 <body>
   <h1>Rock Paper Scissors Game</h1>
+  <h1><a>Please Log In</a></h1>
 
   <!-- Login Form -->
   <div id="login-area">
