--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>4aaa4f26</title>
+  <title>4aaa4f26 - Login Page</title>
   <style>
     body {
       font-family: Arial;
@@ -10,42 +10,27 @@
       margin: auto;
       padding-top: 20px;
     }
-    .hidden { display: none; }
-    .result { font-weight: bold; margin-top: 10px; }
+    p.error {
+      color: red;
+    }
   </style>
 </head>
 <body>
-  <h1>Rock Paper Scissors Game</h1>
   <h1><a>Please Log In</a></h1>
 
-  <!-- Login Form -->
-  <div id="login-area">
-    <p>Please log in to play.</p>
+  <form id="login-form" method="post" action="">
     <label>Email:
-      <input type="text" id="email" />
+      <input type="text" id="email" name="email" />
     </label><br><br>
     <label>Password:
-      <input type="password" id="password" />
+      <input type="password" id="password" name="password" />
     </label><br><br>
-    <button onclick="login()">Login</button>
-    <p id="login-error" style="color:red;"></p>
-  </div>
+    <button type="submit">Log In</button>
+  </form>
 
-  <!-- Game Area -->
-  <div id="game-area" class="hidden">
-    <p>Welcome, <span id="user-name"></span>! <button onclick="logout()">Logout</button></p>
-    <label>Choose your move:
-      <select id="human-move">
-        <option value="-1">Select</option>
-        <option value="0">Rock</option>
-        <option value="1">Paper</option>
-        <option value="2">Scissors</option>
-      </select>
-    </label>
-    <button onclick="play()">Play</button>
-    <p class="result" id="game-result"></p>
-  </div>
+  <p class="error" id="login-error"></p>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
   <script>
     const correctEmail = 'umsi@umich.edu';
     const correctPasswordHash = 'e6601cc12271d9e7fcb9a3f45b1fa4b8'; // md5('XyZzy12*_badsecret42')
@@ -55,7 +40,9 @@
       return CryptoJS.MD5(str).toString();
     }
 
-    function login() {
+    document.getElementById('login-form').onsubmit = function(event) {
+      event.preventDefault();
+
       const email = document.getElementById('email').value.trim();
       const password = document.getElementById('password').value;
       const error = document.getElementById('login-error');
@@ -71,50 +58,12 @@
 
       const hash = md5(salt + password);
       if (email === correctEmail && hash === correctPasswordHash) {
-        document.getElementById('login-area').classList.add('hidden');
-        document.getElementById('game-area').classList.remove('hidden');
-        document.getElementById('user-name').textContent = email;
-        error.textContent = '';
+        localStorage.setItem('who', email);
+        window.location.href = 'game.html';
       } else {
         error.textContent = 'Incorrect username or password';
       }
-    }
-
-    function logout() {
-      document.getElementById('login-area').classList.remove('hidden');
-      document.getElementById('game-area').classList.add('hidden');
-      document.getElementById('email').value = '';
-      document.getElementById('password').value = '';
-      document.getElementById('game-result').textContent = '';
-    }
-
-    function play() {
-      const moves = ['Rock', 'Paper', 'Scissors'];
-      const human = parseInt(document.getElementById('human-move').value);
-      const computer = Math.floor(Math.random() * 3);
-
-      if (human === -1) {
-        document.getElementById('game-result').textContent = 'Please select a move.';
-        return;
-      }
-
-      let result;
-      if (human === computer) {
-        result = 'Tie';
-      } else if ((human === 0 && computer === 2) ||
-                 (human === 1 && computer === 0) ||
-                 (human === 2 && computer === 1)) {
-        result = 'You Win';
-      } else {
-        result = 'You Lose';
-      }
-
-      document.getElementById('game-result').textContent =
-        `You played ${moves[human]}, Computer played ${moves[computer]}. Result: ${result}`;
-    }
+    };
   </script>
-
-  <!-- MD5 Library (CryptoJS) -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
 </body>
 </html>
