--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>4aaa4f26 - Login Page</title>
+  <title>4aaa4f26</title>
   <style>
     body {
       font-family: Arial;
