--- a/game.html
+++ b/game.html
@@ -1,92 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>4aaa4f26</title>
   <style>
-    body { font-family: Arial, sans-serif; }
-    .container { border: 2px solid blue; padding: 15px; width: fit-content; }
-    select, button { margin-right: 5px; padding: 5px; }
-    .message {
-      background-color: #f5f5f5;
-      border: 1px solid #ccc;
-      padding: 10px;
-      margin-top: 10px;
-      white-space: pre-wrap;
-      font-family: monospace;
+    body {
+      font-family: Arial;
+      max-width: 500px;
+      margin: auto;
+      padding-top: 20px;
     }
+    .result { font-weight: bold; margin-top: 10px; }
   </style>
 </head>
 <body>
+  <h1>Rock Paper Scissors Game</h1>
+  <p>Welcome, <span id="user-name"></span>! <button id="logout-btn">Logout</button></p>
 
-<div class="container">
-  <h1>Rock Paper Scissors</h1>
-  <p>Welcome: <strong id="userDisplay"></strong></p>
+  <label>Choose your move:
+    <select id="human-move">
+      <option value="-1">Select</option>
+      <option value="0">Rock</option>
+      <option value="1">Paper</option>
+      <option value="2">Scissors</option>
+    </select>
+  </label>
+  <button onclick="play()">Play</button>
+  <p class="result" id="game-result"></p>
 
-  <select id="strategy">
-    <option value="">Select</option>
-    <option value="Rock">Rock</option>
-    <option value="Paper">Paper</option>
-    <option value="Scissors">Scissors</option>
-  </select>
+  <script>
+    // Parse URL params to get user
+    function getQueryParams() {
+      const params = {};
+      location.search.substr(1).split("&").forEach(function(pair) {
+        if (pair === "") return;
+        const parts = pair.split("=");
+        params[decodeURIComponent(parts[0])] = decodeURIComponent(parts[1] || "");
+      });
+      return params;
+    }
 
-  <button onclick="playGame()">Play</button>
-  <button onclick="logout()">Logout</button>
+    const params = getQueryParams();
+    const user = params.who;
 
-  <div id="output" class="message">
-    Please select a strategy and press Play.
-  </div>
-</div>
+    if (!user) {
+      alert('You must log in first');
+      window.location.href = 'login.html';
+    } else {
+      document.getElementById('user-name').textContent = user;
+    }
 
-<script>
-window.onload = function () {
-  const username = localStorage.getItem("username");
-  if (!username) {
-    alert("Please log in first.");
-    window.location.href = "login.html";
-    return;
-  }
-  document.getElementById("userDisplay").textContent = username;
-};
+    document.getElementById('logout-btn').onclick = function() {
+      window.location.href = 'login.html';
+    };
 
-function playGame() {
-  const strategy = document.getElementById("strategy").value;
-  if (strategy === "") {
-    alert("Please select a move.");
-    return;
-  }
+    function play() {
+      const moves = ['Rock', 'Paper', 'Scissors'];
+      const human = parseInt(document.getElementById('human-move').value);
+      const computer = Math.floor(Math.random() * 3);
 
-  const choices = ["Rock", "Paper", "Scissors"];
-  const computer = choices[Math.floor(Math.random() * 3)];
+      if (human === -1) {
+        document.getElementById('game-result').textContent = 'Please select a move.';
+        return;
+      }
 
-  let result = "";
-  if (strategy === computer) {
-    result = "Tie";
-  } else if (
-    (strategy === "Rock" && computer === "Scissors") ||
-    (strategy === "Paper" && computer === "Rock") ||
-    (strategy === "Scissors" && computer === "Paper")
-  ) {
-    result = "You Win";
-  } else {
-    result = "You Lose";
-  }
+      let result;
+      if (human === computer) {
+        result = 'Tie';
+      } else if ((human === 0 && computer === 2) ||
+                 (human === 1 && computer === 0) ||
+                 (human === 2 && computer === 1)) {
+        result = 'You Win';
+      } else {
+        result = 'You Lose';
+      }
 
-  const logLine = `Human=${strategy} Computer=${computer} Result=${result}`;
-  const outputDiv = document.getElementById("output");
-
-  if (outputDiv.textContent.trim() === "Please select a strategy and press Play.") {
-    outputDiv.textContent = logLine;
-  } else {
-    outputDiv.textContent += "\n" + logLine;
-  }
-}
-
-function logout() {
-  localStorage.removeItem("username");
-  window.location.href = "login.html";
-}
-</script>
-
+      document.getElementById('game-result').textContent =
+        `You played ${moves[human]}, Computer played ${moves[computer]}. Result: ${result}`;
+    }
+  </script>
 </body>
 </html>
